--- a/WebApplicationFrontend/src/app/search/report-search/report-search.component.html
+++ b/WebApplicationFrontend/src/app/search/report-search/report-search.component.html
@@ -18,7 +18,8 @@
         <mat-form-field appearance="fill" class="fix-margins">
             <mat-label>Choose option</mat-label>
             <mat-select formControlName="selectedOption">
-                <mat-option value="Search by doctor">Search by doctor</mat-option>
+                <mat-option value="Search by doctor name">Search by doctor name</mat-option>
+                <mat-option value="Search by doctor surname">Search by doctor surname</mat-option>
                 <mat-option value="Search by diagnosis">Search by diagnosis</mat-option>
                 <mat-option value="Search by date of examination">Search by date of examination</mat-option>
                 <mat-option value="Search by allergens">Search by allergens</mat-option>
@@ -27,14 +28,27 @@
     
     
     
-        <span *ngIf="reportForm.get('selectedOption').value === 'Search by doctor'">
+        <span *ngIf="reportForm.get('selectedOption').value === 'Search by doctor name'">
             <mat-form-field appearance="fill" class="fix-margins">
-                <mat-label>Doctor</mat-label>
-                <input matInput formControlName="doc">
-                <mat-error *ngIf="reportForm.get('doc').hasError('pattern') && !reportForm.get('doc').hasError('required')">
+                <mat-label>Doctor name</mat-label>
+                <input matInput formControlName="docName">
+                <mat-error *ngIf="reportForm.get('docName').hasError('pattern') && !reportForm.get('docName').hasError('required')">
                     Must contain letters only
                 </mat-error>
-                <mat-error *ngIf="reportForm.get('doc').hasError('required')">
+                <mat-error *ngIf="reportForm.get('docName').hasError('required')">
+                    Can not be empty
+                </mat-error>
+            </mat-form-field>
+        </span> 
+
+        <span *ngIf="reportForm.get('selectedOption').value === 'Search by doctor surname'">
+            <mat-form-field appearance="fill" class="fix-margins">
+                <mat-label>Doctor surname</mat-label>
+                <input matInput formControlName="docSurname">
+                <mat-error *ngIf="reportForm.get('docSurname').hasError('pattern') && !reportForm.get('docSurname').hasError('required')">
+                    Must contain letters only
+                </mat-error>
+                <mat-error *ngIf="reportForm.get('docSurname').hasError('required')">
                     Can not be empty
                 </mat-error>
             </mat-form-field>
@@ -98,7 +112,8 @@
     <mat-form-field appearance="fill" class="fix-margins">
         <mat-label>Choose option</mat-label>
         <mat-select formControlName="selectedOption2">
-            <mat-option value="Search by doctor">Search by doctor</mat-option>
+            <mat-option value="Search by doctor name">Search by doctor name</mat-option>
+            <mat-option value="Search by doctor surname">Search by doctor surname</mat-option>
             <mat-option value="Search by diagnosis">Search by diagnosis</mat-option>
             <mat-option value="Search by date of examination">Search by date of examination</mat-option>
             <mat-option value="Search by allergens">Search by allergens</mat-option>
@@ -107,14 +122,27 @@
 
 
 
-    <span *ngIf="reportForm.get('duplicates.0').value.selectedOption2 === 'Search by doctor'">
+    <span *ngIf="reportForm.get('duplicates.0').value.selectedOption2 === 'Search by doctor name'">
         <mat-form-field appearance="fill" class="fix-margins">
-            <mat-label>Doctor</mat-label>
-            <input matInput formControlName="doc2">
-            <mat-error *ngIf="reportForm.get('duplicates.0').get('doc2').hasError('pattern') && !reportForm.get('duplicates.0').get('doc2').hasError('required')">
+            <mat-label>Doctor name</mat-label>
+            <input matInput formControlName="docName2">
+            <mat-error *ngIf="reportForm.get('duplicates.0').get('docName2').hasError('pattern') && !reportForm.get('duplicates.0').get('docName2').hasError('required')">
                 Must contain letters only
             </mat-error>
-            <mat-error *ngIf="reportForm.get('duplicates.0').get('doc2').hasError('required')">
+            <mat-error *ngIf="reportForm.get('duplicates.0').get('docName2').hasError('required')">
+                Can not be empty
+            </mat-error>
+        </mat-form-field>
+    </span> 
+    
+    <span *ngIf="reportForm.get('duplicates.0').value.selectedOption2 === 'Search by doctor surname'">
+        <mat-form-field appearance="fill" class="fix-margins">
+            <mat-label>Doctor surname</mat-label>
+            <input matInput formControlName="docSurname2">
+            <mat-error *ngIf="reportForm.get('duplicates.0').get('docSurname2').hasError('pattern') && !reportForm.get('duplicates.0').get('docSurname2').hasError('required')">
+                Must contain letters only
+            </mat-error>
+            <mat-error *ngIf="reportForm.get('duplicates.0').get('docSurname2').hasError('required')">
                 Can not be empty
             </mat-error>
         </mat-form-field>
@@ -177,3 +205,36 @@
 </div>
 
 </form>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="doctorName">
+      <th mat-header-cell *matHeaderCellDef> Doctor name </th>
+      <td mat-cell *matCellDef="let element"> {{element.doctorName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="doctorSurname">
+        <th mat-header-cell *matHeaderCellDef> Doctor surname </th>
+        <td mat-cell *matCellDef="let element"> {{element.doctorSurname}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="diagnosis">
+      <th mat-header-cell *matHeaderCellDef> Diagnosis </th>
+      <td mat-cell *matCellDef="let element"> {{element.diagnosis}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef> Date of examination </th>
+        <td mat-cell *matCellDef="let element"> {{element.dateOfExamination}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="allergens">
+        <th mat-header-cell *matHeaderCellDef> Allergens </th>
+        <td mat-cell *matCellDef="let element"> {{element.allergens}} </td>
+    </ng-container>
+  
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
