--- a/WebApplicationFrontend/src/app/search/prescription-simple-search/prescription-simple-search.component.html
+++ b/WebApplicationFrontend/src/app/search/prescription-simple-search/prescription-simple-search.component.html
@@ -1,7 +1,7 @@
 <div style="text-align: center;">
     <h1>Prescription search</h1>
 </div>
-<form class="container" [formGroup]="prescriptionForm">
+<form class="container" [formGroup]="prescriptionForm" (ngSubmit)="onSubmit()">
     <div style="margin-left: 10px;">
         <a mat-raised-button routerLink="/reportSimpleSearch" target="_blank">Search reports</a>
     </div>
@@ -14,8 +14,8 @@
         <div>
             <mat-form-field appearance="fill" class="fix-margins">
                 <mat-label>Medicine</mat-label>
-                <input matInput [formControl]="med">
-                <mat-error *ngIf="med.hasError('pattern')">
+                <input matInput formControlName="medicine">
+                <mat-error *ngIf="prescriptionForm.get('medicine').hasError('pattern')">
                     Must contain letters only
                 </mat-error>
             </mat-form-field>
@@ -24,8 +24,8 @@
 
             <mat-form-field appearance="fill" class="fix-margins">
                 <mat-label>Hourly intake</mat-label>
-                <input matInput [formControl]="hour">
-                <mat-error *ngIf="hour.hasError('pattern')">
+                <input matInput formControlName="hourlyIntake">
+                <mat-error *ngIf="prescriptionForm.get('hourlyIntake').hasError('pattern')">
                     Must be a number 0-9
                 </mat-error>
             </mat-form-field>
@@ -34,15 +34,15 @@
 
             <mat-form-field appearance="fill" class="fix-margins">
                 <mat-label>Enter a date range</mat-label>
-                <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-                    <input matStartDate formControlName="start" placeholder="Start date">
-                    <input matEndDate formControlName="end" placeholder="End date">
+                <mat-date-range-input [rangePicker]="picker">
+                    <input matStartDate formControlName="startDate" placeholder="Start date">
+                    <input matEndDate formControlName="endDate" placeholder="End date">
                 </mat-date-range-input>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
 
-                <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-                <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+                <mat-error *ngIf="prescriptionForm.get('startDate').hasError('matStartDateInvalid')">Invalid start date</mat-error>
+                <mat-error *ngIf="prescriptionForm.get('endDate').hasError('matEndDateInvalid')">Invalid end date</mat-error>
             </mat-form-field>
 
 
@@ -61,8 +61,8 @@
     <th>Date</th>
 
     <tr *ngFor="let prescription of allPrescriptions">
-        <td>{{prescription.Medicine}}</td>
-        <td>{{prescription.HourlyIntake}}</td>
-        <td>{{prescription.Date}}</td>
+        <td>{{prescription.medicine}}</td>
+        <td>{{prescription.hourlyIntake}}</td>
+        <td>{{prescription.date | date : 'dd/MM/yyyy'}}</td>
     </tr>
 </table>
