--- a/GraphicEditor/View/MainPage.xaml
+++ b/GraphicEditor/View/MainPage.xaml
@@ -40,14 +40,16 @@
                     <Grid Background="#FFE5E5E5">
                         <Label Content="Wards:" HorizontalAlignment="Left" Margin="132,-7,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="SemiBold" Width="110" Height="35"/>
                         <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="132,28,0,0">
+                            <ComboBoxItem Content="General H1"/>
+                            <ComboBoxItem Content="Cardiology"/>
+                            <ComboBoxItem Content="Oncology"/>
                             <ComboBoxItem Content="Radiology"/>
                             <ComboBoxItem Content="Neurology"/>
-                            <ComboBoxItem Content="Oncology"/>
-                            <ComboBoxItem Content="Cardiology"/>
                             <ComboBoxItem Content="Intesive care"/>
+                            <ComboBoxItem Content="General H2"/>
+                            <ComboBoxItem Content="Dialysis"/>
                             <ComboBoxItem Content="Gastroenterology"/>
                             <ComboBoxItem Content="Hematology"/>
-                            <ComboBoxItem Content="Dialysis"/>
                             <ComboBoxItem Content="Rheumatology"/>
                             <ComboBoxItem Content="Infectous Diseases"/>
                         </ComboBox>
@@ -75,10 +77,11 @@
                         </ComboBox>
                         <Label Content="Wards:" HorizontalAlignment="Left" Margin="132,-7,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="SemiBold" Width="110" Height="35" Grid.Column="2"/>
                         <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="132,28,0,0" Grid.Column="2">
-                            <ComboBoxItem Content="Radiology"/>
-                            <ComboBoxItem Content="Neurology"/>
-                            <ComboBoxItem Content="Oncology"/>
+                            <ComboBoxItem Content="General"/>
                             <ComboBoxItem Content="Cardiology"/>
+                            <ComboBoxItem Content="Oncology"/>
+                            <ComboBoxItem Content="Radiology"/>
+                            <ComboBoxItem Content="Neurology"/> 
                             <ComboBoxItem Content="Intesive care"/>
                         </ComboBox>
                     </Grid>
@@ -93,9 +96,10 @@
                         </ComboBox>
                         <Label Content="Wards:" HorizontalAlignment="Left" Margin="132,-7,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="SemiBold" Width="110" Height="35"/>
                         <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="132,28,0,0">
+                            <ComboBoxItem Content="General"/>
+                            <ComboBoxItem Content="Dialysis"/>
                             <ComboBoxItem Content="Gastroenterology"/>
                             <ComboBoxItem Content="Hematology"/>
-                            <ComboBoxItem Content="Dialysis"/>
                             <ComboBoxItem Content="Rheumatology"/>
                             <ComboBoxItem Content="Infectous Diseases"/>
                         </ComboBox>
