--- a/GraphicEditor/View/Building1SecondFloorPlan.xaml
+++ b/GraphicEditor/View/Building1SecondFloorPlan.xaml
@@ -5,22 +5,16 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:GraphicEditor"
       mc:Ignorable="d" 
+      Loaded="Building1Objects"
       d:DesignHeight="652" d:DesignWidth="766"
       Title="Building1SecondFloorPlan">
 
     <Grid>
-        <Canvas x:Name="canvasBuild1fl1" Background="MintCream">
+        <Canvas x:Name="canvasH1F2" Background="MintCream">
             <Label Content="H1 Second floor" FontFamily="Georgia" FontWeight="UltraBold" FontSize="50" Foreground="Black" Canvas.Left="168" Canvas.Top="40"/>
             <Image Name="imageArrowDown" Width="60" Canvas.Left="348" Canvas.Top="495" MouseLeftButtonDown="mouseClickArrowDown" />
-            <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" Height="260" Width="595" Canvas.Left="86"  Canvas.Top="196"/>
-            <Rectangle Fill="#77c588" Height="100" Width="50" Stroke="Black" StrokeThickness="3" Canvas.Left="184" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
-            <Rectangle Fill="#77c588" Height="100" Width="50" Stroke="Black" StrokeThickness="3" Canvas.Top="356" Canvas.Left="134" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
-            <Rectangle Fill="#77c588" Height="100" Width="50" Canvas.Left="284" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" RenderTransformOrigin="-0.48,0.52" />
-            <Rectangle Fill="#dca0d3" Height="100" Width="50" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
-            <Rectangle Fill="#208e38" Height="100" Width="100" Canvas.Left="581" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
-            <Rectangle Fill="#dca0d3" Height="100" Width="50" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
-            <Rectangle Fill="#dca0d3" Height="100" Width="50" Canvas.Left="481" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
-            <Rectangle Fill="#208e38" Height="100" Width="100" Canvas.Left="581" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
+            
+            
             <Line X1="10" Y1="10" X2="10" Y2="30" Stroke="Black" 
                   StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="392" Canvas.Top="256"/>
             <Line X1="10" Y1="35" X2="5" Y2="30" Stroke="Black" 
@@ -54,21 +48,11 @@
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="235"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="225"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="215"/>
-            <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="184" Stroke="Black" StrokeThickness="3" Canvas.Top="246" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
-            <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="184" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
-            <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="234" Stroke="Black" StrokeThickness="3" Canvas.Top="246" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
-            <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="234" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom" RenderTransformOrigin="0.948,0.611"/>
-            <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="86" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
-            <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="86" Stroke="Black" StrokeThickness="3" Canvas.Top="246" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
-            <Rectangle Fill="#dca0d3" Height="100" Width="50" Canvas.Left="481" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
-            <Rectangle Fill="#77c588" Height="100" Width="50" Canvas.Left="234" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
+            
             <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="384" Canvas.Top="356"/>
             <Rectangle Fill="#494848" Height="50" Width="50" Canvas.Left="384" Stroke="Black" StrokeThickness="3" Canvas.Top="406"/>
             <Rectangle Fill="#494848" Height="50" Width="50" Canvas.Left="434" Stroke="Black" StrokeThickness="3" Canvas.Top="406"/>
-            <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="86" Stroke="Black" StrokeThickness="3" Canvas.Top="406" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom" RenderTransformOrigin="0.948,0.611"/>
-            <Rectangle Fill="#ffdf99" Height="50" Width="50" Canvas.Left="331" Stroke="Black" StrokeThickness="3" Canvas.Top="246" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom" RenderTransformOrigin="0.948,0.611"/>
-            <Rectangle Fill="#ffdf99" Height="50" Width="50" Canvas.Left="331" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom" RenderTransformOrigin="0.948,0.611"/>
-            <Rectangle Fill="#9da49f" Height="50" Width="50" Canvas.Left="333" Stroke="Black" StrokeThickness="3" Canvas.Top="406" RenderTransformOrigin="0.948,0.611" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
+            
         </Canvas>
         <Popup x:Name="PopupPatientRoom"
                    AllowsTransparency="True"
