--- a/WebApplicationFrontend/src/app/login/login/login.component.css
+++ b/WebApplicationFrontend/src/app/login/login/login.component.css
@@ -19,8 +19,11 @@
 }
 
 mat-card {
-    width: 30vw;
-    height: 20vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 350px;
 }
 
 .container {
