--- a/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-admin/navigation-bar-admin.component.html
+++ b/WebApplicationFrontend/src/app/navigation-bar/navigation-bar-admin/navigation-bar-admin.component.html
@@ -10,6 +10,7 @@
                     MEDBAY TECH</a></h1>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a routerLink="/countChart" class="nav-link">Event statistics</a></li>
                         <li class="nav-item"><a routerLink="/allFeedback"  class="nav-link">All feedbacks</a></li>           
                         <li class="nav-item"><a routerLink="/blockMaliciousUsers"  class="nav-link" name = "block-malicious-users">Malicious pacients</a></li>
                         <li class="nav-item"><a routerLink="" (click) = "logout()" class="nav-link">Log out</a></li>
